# Aeropuerto

./: CMakeLists.txt  main  main.cpp
data/: aviones.csv  reservaciones.csv  usuarios.csv  vuelos.csv
include/: Reservacion.h  Sistema.h  Usuario.h  Vuelo.h
include/controllers/: ManejadorAvion.h  ManejadorReserva.h  ManejadorUsuario.h  ManejadorVuelo.h  Sistema.h
include/models/: Avion.h  Reservacion.h  Usuario.h  Vuelo.h
